[metadata]
name = ironic-oneviewd
summary = Command Line Interface to ease the use of OneView Driver for Ironic
description-file =
    README.rst
author = OpenStack
author-email = thiagop@lsd.ufcg.edu.br
home-page = http://git.lsd.ufcg.edu.br/ironic-drivers/ironic-oneviewd
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    ironic_oneviewd

[entry_points]
console_scripts =
    ironic-oneviewd = ironic_oneviewd.shell:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = ironic-oneviewd/locale
domain = ironic-oneviewd

[update_catalog]
domain = ironic-oneviewd
output_dir = ironic-oneviewd/locale
input_file = ironic-oneviewd/locale/ironic-oneviewd.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = ironic-oneviewd/locale/ironic-oneviewd.pot
