[metadata]
name = ironic-oneviewd
summary = Daemon service to enroll nodes and inventory management to be used for openstack/ironic OneView drivers
description-file =
    README.md
author = Universidade Federal de Campina Grande
author-email = ricardo@lsd.ufcg.edu.br
home-page = https://github.com/HewlettPackard/ironic-oneviewd
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
data_files =
    /etc/ironic-oneviewd = etc/ironic-oneviewd/*

packages =
    ironic_oneviewd

[entry_points]
console_scripts =
    ironic-oneviewd = ironic_oneviewd.shell:main

oslo.config.opts =
    ironic-oneviewd = ironic_oneviewd.conf.opts:list_opts

